--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -28,8 +28,8 @@
   metadata:
     title_ru: 
     text_ru: 
-    image: /assets/achievements/anime/mecha_3.png
-    border_color: "#66cdaa"
+    image: /assets/achievements/anime/mecha_3.jpg
+    border_color: "#00693E"
 
 - <<: *defaults
   level: 4
