horror_thriller.yml
Уровень 1 - https://moe.shikimori.org/system/user_images/original/3824/602667.jpg

--- a/priv/rules/horror_thriller.yml
+++ b/priv/rules/horror_thriller.yml
@@ -11,7 +11,7 @@
     title_ru: Смерть дышит в спину
     text_ru: Практически всё в этом мире умирает. В этом мире жизнь — всего лишь незначительная частичка, не более чем секундное явление. Смерть повсеместна.
     image: /assets/achievements/anime/horror_thriller_1.png
-    border_color: "#ddc49c"
+    border_color: "#821d60"
     topic_id: 227420
 
 - <<: *defaults
