horror_thriller.yml
Уровень 1 - https://moe.shikimori.org/system/user_images/original/3824/602667.jpg

--- a/priv/rules/horror_thriller.yml
+++ b/priv/rules/horror_thriller.yml
@@ -10,7 +10,7 @@
   metadata:
     title_ru: Смерть дышит в спину
     text_ru: Практически всё в этом мире умирает. В этом мире жизнь — всего лишь незначительная частичка, не более чем секундное явление. Смерть повсеместна.
-    image: /assets/achievements/anime/horror_thriller_1.png
+    image: /assets/achievements/anime/horror_thriller_1.jpg
     border_color: "#821d60"
     topic_id: 227420
 
