--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -17,7 +17,7 @@
   level: 2
   threshold: 90
   metadata:
-    title_ru: Hassin!
+    title_ru: Hasshin!
     text_ru: Некогда непривычный костюм пилота теперь сидит как влитой. Вы — ас, впереди — бесконечные сражения.
     image: /assets/achievements/anime/mecha_2.jpg
     border_color: "#00693E"
