mahou_shoujo.yml

--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -491,7 +491,7 @@
   threshold: 35%
   metadata:
     title_ru: Магия - второе имя
-    text_ru: Не важно, каков ваш пол, вы можете превращаться в девушку с двумя хвостиками и нести возмездие во имя луны.
+    text_ru: Не важно, какой ваш пол и сколько вам лет, если ваше призвание - нести любовь и справедливость.
     image: /assets/achievements/anime/mahou_shoujo_2.jpg
     border_color: "#49678d"
 
@@ -500,7 +500,7 @@
   threshold: 55%
   metadata:
     title_ru: Все враги побеждены
-    text_ru: Опасность миновала, жителям Волшебной страны остаётся только жить-поживать да добра наживать.
+    text_ru: Опасность миновала! Можно возвращаться к семье и школьным друзьям.
     image: /assets/achievements/anime/mahou_shoujo_3.jpg
     border_color: "#D8B1BF"
 
