--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -4,7 +4,7 @@
   algo: duration
   filters:
     franchise: fullmetal_alchemist
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Стальной алхимик
     image:
@@ -81,7 +81,7 @@
   algo: duration
   filters:
     franchise: mushishi
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Мастер муси
     image:
@@ -92,7 +92,7 @@
   algo: duration
   filters:
     franchise: hajime_no_ippo
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Первый шаг
     image:
@@ -114,7 +114,7 @@
   algo: duration
   filters:
     franchise: boku_no_hero_academia
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Моя геройская академия
     image:
@@ -125,7 +125,7 @@
   algo: duration
   filters:
     franchise: natsume_yuujinchou
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Тетрадь дружбы Нацумэ
     image:
@@ -136,7 +136,7 @@
   algo: duration
   filters:
     franchise: suzumiya_haruhi_no_yuuutsu
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Меланхолия Харухи Судзумии
     image:
@@ -147,7 +147,7 @@
   algo: duration
   filters:
     franchise: bakuman
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Бакуман
     image:
@@ -160,7 +160,7 @@
     franchise: koro_sensei_q
     not_anime_ids:
     - 33511
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Класс убийц
     image:
@@ -187,7 +187,7 @@
     franchise: jojo_no_kimyou_na_bouken
     not_anime_ids:
     - 3603
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Невероятное приключение ДжоДжо
     image:
@@ -198,7 +198,7 @@
   algo: duration
   filters:
     franchise: aria_the_ova
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Ария
     image:
@@ -222,7 +222,7 @@
     franchise: kuroshitsuji
     not_anime_ids:
     - 6163
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Тёмный дворецкий
     image:
@@ -233,7 +233,7 @@
   algo: duration
   filters:
     franchise: uchuu_kyoudai
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Космические братья
     image:
@@ -248,7 +248,7 @@
     - 10870
     - 10948
     - 31617
-  threshold: 95%
+  threshold: 98%
   metadata:
     title_ru: Призрак в доспехах
     image:
@@ -259,7 +259,7 @@
   algo: duration
   filters:
     franchise: kuroko_no_basket
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Баскетбол Куроко
     image:
@@ -270,7 +270,7 @@
   algo: duration
   filters:
     franchise: shokugeki_no_souma
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Повар-боец Сома
     image:
@@ -281,7 +281,7 @@
   algo: duration
   filters:
     franchise: slam_dunk
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Слэм-данк
     image:
@@ -314,7 +314,7 @@
   algo: duration
   filters:
     franchise: yuu_yuu_hakusho
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Отчет о буйстве духов
     image:
@@ -336,7 +336,7 @@
   algo: duration
   filters:
     franchise: berserk
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Берсерк
     image:
@@ -347,7 +347,7 @@
   algo: duration
   filters:
     franchise: magi
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Маги
     image:
@@ -358,7 +358,7 @@
   algo: duration
   filters:
     franchise: diamond_no_ace
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Путь аса
     image:
@@ -369,7 +369,7 @@
   algo: duration
   filters:
     franchise: tsubasa
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Хроника крыльев
     image:
@@ -380,7 +380,7 @@
   algo: duration
   filters:
     franchise: umineko_no_naku_koro_ni
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Когда плачут цикады
     image:
@@ -420,7 +420,7 @@
   algo: duration
   filters:
     franchise: sket_dance
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Скет Данс
     image:
@@ -471,7 +471,7 @@
   algo: duration
   filters:
     franchise: durarara
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Дюрарара!!
     image:
@@ -482,7 +482,7 @@
   algo: duration
   filters:
     franchise: working
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Работа!!
     image:
@@ -504,7 +504,7 @@
   algo: duration
   filters:
     franchise: nanatsu_no_taizai
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Семь смертных грехов
     image:
@@ -586,12 +586,11 @@
     franchise: lupin_iii
     not_anime_ids:
     - 5343
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Люпен III
     image:
     - http://i.imgur.com/YhU0jqQ.png
-    - http://i.imgur.com/1rH2Mk1.png
     topic_id: 247360
 - neko_id: dmatsu_san
   level: 1
@@ -609,7 +608,7 @@
   algo: duration
   filters:
     franchise: hikaru_no_go
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Хикару и Го
     image:
@@ -642,7 +641,7 @@
   algo: duration
   filters:
     franchise: full_metal_panic
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Стальная тревога
     image:
@@ -683,7 +682,7 @@
     - 28911
     - 28913
     - 28915
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Наброски Хидамари
     image:
@@ -694,7 +693,7 @@
   algo: duration
   filters:
     franchise: slayers
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Рубаки
     image:
@@ -721,7 +720,7 @@
     not_anime_ids:
     - 27829
     - 32264
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Индекс волшебства
     image:
@@ -756,7 +755,7 @@
     franchise: snow_halation
     not_anime_ids:
     - 21853
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Живая любовь!
     image:
@@ -769,17 +768,17 @@
     franchise: nurarihyon_no_mago
     not_anime_ids:
     - 9731
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Внук Нурарихёна
     image:
     - https://kawai.shikimori.org/system/user_images/original/84020/588986.jpg
     topic_id: 247360
-- neko_id: prince_of_tennis
+- neko_id: tennis_no_ouji_sama
   level: 1
   algo: duration
   filters:
-    franchise: prince_of_tennis
+    franchise: tennis_no_ouji_sama
   threshold: 95%
   metadata:
     title_ru: Принц тенниса
@@ -791,7 +790,7 @@
   algo: duration
   filters:
     franchise: school_rumble
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Школьный переполох
     image:
@@ -802,7 +801,7 @@
   algo: duration
   filters:
     franchise: touch
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Касание
     image:
@@ -837,7 +836,7 @@
   algo: duration
   filters:
     franchise: ushio_to_tora
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Усио и Тора
     image:
@@ -859,7 +858,7 @@
   algo: duration
   filters:
     franchise: jigoku_shoujo
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Адская девочка
     image:
@@ -894,7 +893,7 @@
   algo: duration
   filters:
     franchise: saiyuuki_gaiden
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Саюки
     image:
@@ -940,7 +939,7 @@
   algo: duration
   filters:
     franchise: mahoujin_guruguru
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Волшебный круг Гуру-Гуру
     image:
@@ -1050,7 +1049,7 @@
   algo: duration
   filters:
     franchise: hetalia
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Хеталия
     image:
@@ -1072,7 +1071,7 @@
   algo: duration
   filters:
     franchise: hayate_no_gotoku
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Боевой дворецкий Хаятэ!
     image:
@@ -1082,8 +1081,8 @@
   level: 1
   algo: duration
   filters:
-    franchise: mobile_police_patlabor
-  threshold: 95%
+    franchise: minipato
+  threshold: 100%
   metadata:
     title_ru: Полиция будущего
     image:
@@ -1127,7 +1126,7 @@
   algo: duration
   filters:
     franchise: to_love_ru
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Любовные неприятности
     image:
@@ -1149,7 +1148,7 @@
   algo: duration
   filters:
     franchise: aikatsu
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Айкацу!
     image:
@@ -1182,7 +1181,7 @@
   algo: duration
   filters:
     franchise: minami_ke
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Сёстры Минами
     image:
@@ -1217,7 +1216,7 @@
     franchise: blood
     not_anime_ids:
     - 14077
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Кровь
     image:
@@ -1230,7 +1229,7 @@
     franchise: kimagure_orange_road
     not_anime_ids:
     - 14059
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Капризы Апельсиновой улицы
     image:
@@ -1252,7 +1251,7 @@
   algo: duration
   filters:
     franchise: fushigi_yuugi
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Таинственная игра
     image:
@@ -1263,7 +1262,7 @@
   algo: duration
   filters:
     franchise: pripara
-  threshold: 95%
+  threshold: 85%
   metadata:
     title_ru: При Пара
     image:
@@ -1274,7 +1273,7 @@
   algo: duration
   filters:
     franchise: utawarerumono
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Прославленный
     image:
@@ -1285,7 +1284,7 @@
   algo: duration
   filters:
     franchise: shakugan_no_shana
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: Пламенный взор Шаны
     image:
@@ -1307,7 +1306,7 @@
   algo: duration
   filters:
     franchise: puchimas
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Идолмастер
     image:
@@ -1318,7 +1317,7 @@
   algo: duration
   filters:
     franchise: zero_no_tsukaima
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Подручный Луизы-Нулизы
     image:
@@ -1329,7 +1328,7 @@
   algo: duration
   filters:
     franchise: toriko
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Торико
     image:
@@ -1384,7 +1383,7 @@
   algo: duration
   filters:
     franchise: zettai_karen_children
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Восхитительные дети
     image:
@@ -1395,7 +1394,7 @@
   algo: duration
   filters:
     franchise: konjiki_no_gash_bell
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Златовласый Гаш Белл
     image:
@@ -1408,7 +1407,7 @@
     franchise: saki
     not_anime_ids:
     - 30292
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Саки
     image:
@@ -1430,7 +1429,7 @@
   algo: duration
   filters:
     franchise: candy_candy
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Кэнди-Кэнди
     image:
@@ -1458,7 +1457,7 @@
     - 16576
     - 21595
     - 32346
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Югио!
     image:
@@ -1469,7 +1468,7 @@
   algo: duration
   filters:
     franchise: seiren
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Нежный укус
     image:
@@ -1491,7 +1490,7 @@
   algo: duration
   filters:
     franchise: selector_spread_wixoss
-  threshold: 95%
+  threshold: 97%
   metadata:
     title_ru: WIXOSS
     image:
@@ -1502,7 +1501,7 @@
   algo: duration
   filters:
     franchise: baki
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Боец Баки
     image:
@@ -1513,7 +1512,7 @@
   algo: duration
   filters:
     franchise: force_live
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Поющий принц
     image:
@@ -1546,7 +1545,7 @@
   algo: duration
   filters:
     franchise: saber_marionette_j
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Воины-марионетки Джей
     image:
@@ -1557,7 +1556,7 @@
   algo: duration
   filters:
     franchise: el_hazard
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Эль-Хазард
     image:
@@ -1579,7 +1578,7 @@
   algo: duration
   filters:
     franchise: cardfight_vanguard
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Карточные бои Авангарда
     image:
@@ -1590,7 +1589,7 @@
   algo: duration
   filters:
     franchise: cyborg
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Киборг 009
     image:
@@ -1607,11 +1606,11 @@
     image:
     - https://nyaa.shikimori.org/system/user_images/original/34807/590450.jpg
     topic_id: 247360
-- neko_id: ad_police
+- neko_id: gall_force
   level: 1
   algo: duration
   filters:
-    franchise: ad_police
+    franchise: gall_force
   threshold: 95%
   metadata:
     title_ru: Кризис каждый день
@@ -1647,7 +1646,7 @@
   algo: duration
   filters:
     franchise: super_robot_taisen_og
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Войны супер-роботов
     image:
@@ -1845,7 +1844,7 @@
   algo: duration
   filters:
     franchise: haou_daikei_ryuu_knight
-  threshold: 95%
+  threshold: 100%
   metadata:
     title_ru: Властелин властелинов Рыцарь Рю
     image:
@@ -1889,7 +1888,7 @@
   algo: duration
   filters:
     franchise: obake_no_q_tarou
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Привидение Кью-Таро
     image:
@@ -1900,7 +1899,7 @@
   algo: duration
   filters:
     franchise: pro_golfer_saru
-  threshold: 95%
+  threshold: 90%
   metadata:
     title_ru: Профессиональный гольфист Сару
     image:
