--- a/priv/rules/oldfag.yml
+++ b/priv/rules/oldfag.yml
@@ -8,7 +8,7 @@
   metadata:
     title_ru: Ценитель классики
     text_ru: "Раньше было лучше: деревья — выше, трава — зеленее, а аниме — интереснее."
-    image: /assets/achievements/anime/oldfag_1.png
+    image: /assets/achievements/anime/oldfag_1.jpg
     border_color: "#c5d0e6"
     topic_id: 227424
 
