mahou_shoujo.yml

--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -3,7 +3,7 @@
   neko_id: mahou_shoujo
   level: 1
   algo: count
-  threshold: 20%
+  threshold: 17
   filters:
     anime_ids:
       - 100
@@ -488,7 +488,7 @@
 
 - <<: *defaults
   level: 2
-  threshold: 35%
+  threshold: 34
   metadata:
     title_ru: Магия - второе имя
     text_ru: Не важно, какой ваш пол и сколько вам лет, если ваше призвание - нести любовь и справедливость.
@@ -497,7 +497,7 @@
 
 - <<: *defaults
   level: 3
-  threshold: 55%
+  threshold: 68
   metadata:
     title_ru: Все враги побеждены
     text_ru: Опасность миновала! Можно возвращаться к семье и школьным друзьям.
@@ -506,7 +506,7 @@
 
 - <<: *defaults
   level: 4
-  threshold: 80%
+  threshold: 136
   metadata:
     title_ru: Настоящее волшебство?
     text_ru: Вашим силам теперь подвластно само мироздание.
