--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -89,7 +89,7 @@
     title_ru: Это даже не финальная форма
     text_ru: Ваш единственный путь — вверх. Пора учиться доброй снисходительности.
     image: /assets/achievements/anime/animelist_10.jpg
-    border_color: "#434b4d"
+    border_color: "#20B2AA"
 
 - <<: *defaults
   level: 11
