--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -88,7 +88,7 @@
   metadata:
     title_ru: Это даже не финальная форма
     text_ru: Ваш единственный путь — вверх. Пора учиться доброй снисходительности.
-    image: /assets/achievements/anime/animelist_10.jpg
+    image: /assets/achievements/anime/animelist_10.gif
     border_color: "#20B2AA"
 
 - <<: *defaults
