--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - run: mix local.hex --force
       - run: mix local.rebar --force
 
+      # cache is not used since yamler is recompiled every time
       - restore_cache:
           keys:
             - v1-mix-cache-{{ checksum "mix.lock" }}
