--- a/.deliver/config
+++ b/.deliver/config
@@ -3,10 +3,10 @@ APP="neko"
 # https://github.com/edeliver/edeliver/wiki/Auto-Versioning
 AUTO_VERSION=build-date+git-branch+git-revision
 
-BUILD_HOST="neko"
+BUILD_HOST="88.198.7.116"
 BUILD_USER="neko"
 BUILD_AT="/tmp/edeliver/neko/builds"
 
-PRODUCTION_HOSTS="neko"
+PRODUCTION_HOSTS="88.198.7.116"
 PRODUCTION_USER="neko"
 DELIVER_TO="/home/apps"
