--- a/priv/rules/drama.yml
+++ b/priv/rules/drama.yml
@@ -38,4 +38,4 @@
     title_ru: Максимальная эмоциональная отзывчивость
     text_ru: Шрамы на сердце других становятся твоими.
     image: /assets/achievements/anime/drama_4.gif
-    border_color: "#606fde"
+    border_color: "#00008B"
