--- a/priv/rules/drama.yml
+++ b/priv/rules/drama.yml
@@ -18,7 +18,7 @@
   threshold: 90
   metadata:
     title_ru: Эмпатия среднего уровня
-    text_ru: Ну давай, расскажи нам, как плакал над Хатико
+    text_ru: Ну давай, расскажи нам, как плакал над Хатико.
     image: /assets/achievements/anime/drama_2.jpg
     border_color: "#8B4513"
 
