slice_of_life.yml
Уровень 2 - https://nyaa.shikimori.org/system/user_images/original/34807/627045.jpg

--- a/priv/rules/slice_of_life.yml
+++ b/priv/rules/slice_of_life.yml
@@ -20,7 +20,7 @@
     title_ru: Житейские мелочи
     text_ru: Полностью погрязли в повседневных делах и симпатичных вещах.
     image: /assets/achievements/anime/slice_of_life_2.jpg 
-    border_color: "#DAD871"
+    border_color: "#884467"
 
 - <<: *defaults
   level: 3
