--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -440,7 +440,7 @@
     franchise: umineko_no_naku_koro_ni
   threshold: 97%
   metadata:
-    title_ru: Когда плачут цикады
+    title_ru: Когда плачут
     image:
     - http://i.imgur.com/v7pjFJ7.png
     topic_id: 247360
