--- a/priv/rules/mystery.yml
+++ b/priv/rules/mystery.yml
@@ -1,41 +1,7 @@
-- &defaults
-  neko_id: mystery
-  level: 1
-  algo: count
-  threshold: 40
-  filters:
-    genre_ids:
-      - 7
+threshold: 55%
   metadata:
     title_ru: Первое дело
     text_ru: Было не просто, но вы смогли поймать своего первого преступника. Поздравляем, продолжайте в том же духе!
     image: /assets/achievements/anime/mystery_1.jpg
     border_color: "#4c514a"
     topic_id: 222047
-
-- <<: *defaults
-  level: 2
-  threshold: 60
-  metadata:
-    title_ru: Убийца - дворецкий!
-    text_ru: Вы не понаслышке знакомы с дедукцией. Вам нет равных среди юных детективов.
-    image: /assets/achievements/anime/mystery_2.jpg
-    border_color: "#3a59a8"
-
-- <<: *defaults
-  level: 3
-  threshold: 90
-  metadata:
-    title_ru: За семью печатями
-    text_ru: Мэтры детективного дела обращаются к вам за советами.
-    image: /assets/achievements/anime/mystery_3.jpg
-    border_color: "#3D2B1F"
-
-- <<: *defaults
-  level: 4
-  threshold: 150
-  metadata:
-    title_ru: Великий детектив
-    text_ru: Интересных дел катастрофически мало! На поприще детектива вы добились всего.
-    image: /assets/achievements/anime/mystery_4.gif
-    border_color: "#919192"
