--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -36,6 +36,6 @@
   threshold: 230
   metadata:
     title_ru: Ньютайп
-    text_ru: Ore wa Gundam
+    text_ru: ORE WA GUNDAM
     image: /assets/achievements/anime/mecha_4.gif
     border_color: "#20B2AA"
