--- a/priv/rules/sports.yml
+++ b/priv/rules/sports.yml
@@ -36,6 +36,6 @@
   threshold: 100
   metadata:
     title_ru: Олимпийский чемпион
-    text_ru: Первый на пъедестале. Отличная работа!
+    text_ru: Первый на пьедестале. Отличная работа!
     image: /assets/achievements/anime/sports_4.gif
     border_color: "#c45812"
