--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1687,9 +1687,9 @@
     franchise: gall_force
   threshold: 95%
   metadata:
-    title_ru: Кризис каждый день
+    title_ru: Девичья сила
     image:
-    - https://dere.shikimori.org/system/user_images/original/84020/593344.jpg
+    - https://desu.shikimori.org/system/user_images/original/34807/648613.jpg
     topic_id: 247360
 - neko_id: d_c
   level: 1
