mahou_shoujo.yml

--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -410,7 +410,7 @@
       - 32843
   metadata:
     title_ru: Контракт заключён
-    text_ru: My master, положено начало вашего становления юной волшебницой.
+    text_ru: My master, положено начало вашего становления юной волшебницей.
     image: /assets/achievements/anime/mahou_shoujo_1.png
     border_color: "#ff0000"
     topic_id: 222067
