--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1939,12 +1939,12 @@
   level: 1
   algo: duration
   filters:
-    franchise: gall_force
+    franchise: ad_police
   threshold: 95%
   metadata:
-    title_ru: Девичья сила
+    title_ru: Кризис каждый день
     image:
-    - https://desu.shikimori.org/system/user_images/original/34807/648613.jpg
+    - https://dere.shikimori.org/system/user_images/original/84020/593344.jpg
     topic_id: 247360
 - neko_id: ultraman
   level: 1
