--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1935,7 +1935,7 @@
     image:
     - https://kawai.shikimori.org/system/user_images/original/34807/588646.jpg
     topic_id: 247360
-- neko_id: gall_force
+- neko_id: ad_police
   level: 1
   algo: duration
   filters:
