--- a/priv/rules/sports.yml
+++ b/priv/rules/sports.yml
@@ -7,10 +7,10 @@
     genre_ids:
       - 30
   metadata:
-    title_ru: Первый раз на площадке
-    text_ru: Стартовый свисток дан — пора в бой!
+    title_ru: Первый заезд
+    text_ru: Стартовый свисток дан — вперед!
     image: /assets/achievements/anime/sports_1.jpg
-    border_color: "#975916"
+    border_color: "#FFFF00"
     topic_id: 227429
 
 - <<: *defaults
@@ -36,6 +36,6 @@
   threshold: 100
   metadata:
     title_ru: Олимпийский чемпион
-    text_ru: Первый на пьедестале. Отличная работа!
+    text_ru: На вершине пьедестала. Отличная работа!
     image: /assets/achievements/anime/sports_4.gif
     border_color: "#c45812"
