--- a/priv/rules/sports.yml
+++ b/priv/rules/sports.yml
@@ -10,7 +10,7 @@
     title_ru: Первый заезд
     text_ru: Стартовый свисток дан — вперед!
     image: /assets/achievements/anime/sports_1.jpg
-    border_color: "#FFFF00"
+    border_color: "#FFDC33"
     topic_id: 227429
 
 - <<: *defaults
