--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -115,10 +115,10 @@
   metadata:
     title_ru: Раз, два, три, четыре
     text_ru: |-
-      Раз котенок – самый белый
-      Два котенок – самый смелый
-      Три котенок – самый умный
-      А четыре – самый шумный
+      Раз котенок — самый белый
+      Два котенок — самый смелый
+      Три котенок — самый умный
+      А четыре — самый шумный
     image: /assets/achievements/anime/animelist_13.jpg
     border_color: "#C7D0CC"
 
@@ -145,7 +145,7 @@
   threshold: 2500
   metadata:
     title_ru: Герой
-    text_ru: Результат интенсивных тренировок на поприще аниме-просмотра – необычный внешний вид, а побочный эффект – стильный костюмчик.
+    text_ru: Результат интенсивных тренировок на поприще аниме-просмотра — необычный внешний вид, а побочный эффект — стильный костюмчик.
     image: /assets/achievements/anime/animelist_16.jpg
     border_color: "#FFDB58"
 
