--- a/priv/rules/fujoshi.yml
+++ b/priv/rules/fujoshi.yml
@@ -37,6 +37,6 @@
   threshold: 85%
   metadata:
     title_ru: Яойный бог
-    text_ru: Яой - не жанр. Яой — это стиль жизни.
+    text_ru: Яой — не жанр. Яой — это стиль жизни.
     image: /assets/achievements/anime/fujoshi_4.jpg
     border_color: "#e82a8d"
