--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -419,8 +419,8 @@
   level: 2
   threshold: 9%
   metadata:
-    title_ru: Магия - второе имя
-    text_ru: Не важно, какой ваш пол и сколько вам лет, если ваше призвание - нести любовь и справедливость.
+    title_ru: Магия — второе имя
+    text_ru: Не важно, какой ваш пол и сколько вам лет, если ваше призвание — нести любовь и справедливость.
     image: /assets/achievements/anime/mahou_shoujo_2.jpg
     border_color: "#49678d"
 
