--- a/priv/rules/mystery.yml
+++ b/priv/rules/mystery.yml
@@ -17,7 +17,7 @@
   level: 2
   threshold: 60
   metadata:
-    title_ru: Убийца - дворецкий!
+    title_ru: Убийца — дворецкий!
     text_ru: Вы не понаслышке знакомы с дедукцией. Вам нет равных среди юных детективов.
     image: /assets/achievements/anime/mystery_2.jpg
     border_color: "#3a59a8"
