--- a/priv/rules/romance.yml
+++ b/priv/rules/romance.yml
@@ -27,7 +27,7 @@
   threshold: 260
   metadata:
     title_ru: Конфетно-букетный период
-    text_ru: Любовь - это желание отдавать.
+    text_ru: Любовь — это желание отдавать.
     image: /assets/achievements/anime/romance_3.jpg
     border_color: "#f16251"
 
