--- a/priv/rules/space.yml
+++ b/priv/rules/space.yml
@@ -7,7 +7,7 @@
     genre_ids:
       - 29
   metadata:
-    title_ru: 3-2-1... Пуск!
+    title_ru: 3–2–1... Пуск!
     text_ru: Маленький шаг для одного человека, но гигантский скачок для всего человечества.
     image: /assets/achievements/anime/space_1.png
     border_color: "#172d91"
