--- a/priv/rules/world_masterpiece_theater.yml
+++ b/priv/rules/world_masterpiece_theater.yml
@@ -35,7 +35,7 @@
     title_ru: Театр Мировых Шедевров
     text_ru: |-
       Классика западной литературы глазами Востока.
-      Встретиться с любимой книгой дважды – в бумаге и на экране.
+      Встретиться с любимой книгой дважды — в бумаге и на экране.
     image: /assets/achievements/anime/world_masterpiece_theater_1.jpg
     border_color: "#00776B"
     topic_id: 248176
